# KrippendorffUnitizedAlpha

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
krippendorff_unitized_alpha/: __init__.py  krippendorffs_unitized_alpha.py
test/: test_krippendorff_unitized_alpha.py
tests/: test_krippendorff_unitized_alpha.py
