[tool.poetry]
name = "krippendorff_unitized_alpha"
version = "0.1.0"
description = ""
authors = ["Zeljko Bekcic <zeljko.bekcic@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
pytest = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
