[tool.poetry]
name = "krippendorff_unitized_alpha"
version = "0.1.0"
description = "Computing Unitized Krippendorff Alpha (according to https://link.springer.com/article/10.1007/s11135-015-0266-1)"
authors = ["Zeljko Bekcic <zeljko.bekcic@posteo.net>"]
homepage = "https://github.com/zeljkobekcic/KrippendorffUnitizedAlpha"
repository = "https://github.com/zeljkobekcic/KrippendorffUnitizedAlpha"
documentation = "https://github.com/zeljkobekcic/KrippendorffUnitizedAlpha"
keywords = ["krippendorff", "unitized", "alpha", "annotator", "agreement"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
pytest = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
